--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ dependencies {
 	implementation 'com.querydsl:querydsl-jpa'
 	//querydsl 추가
 	implementation 'com.querydsl:querydsl-apt'
+	//mysql
+	runtimeOnly 'mysql:mysql-connector-java'
 }
 
 tasks.named('test') {
