[COMMIT] 프로젝트 기본 틀 잡는중.... - messages.properties 설정 및 테스트 출력 테스트추가 - MessageUtil를 사용하면됨

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,17 +3,13 @@
 # =====================================================================================================================
 
 spring:
-  config:
-    activate:
-      on-profile: test
+  profiles:
+    active:
+      - test
 
   thymeleaf:
     prefix: classpath:templates/
     cache: false
-
-  devtools:
-    livereload:
-      enabled: true
 
   main:
     banner-mode: console
