[COMMIT] 프로젝트 기본 틀 잡는중.... - mysql:mysql-connector-java build.gradle refresh 처리해도 제대로 된 dependency를 인식못하여 실행안되는부분 최신버전(취약점 없는버전) 지정하여 적용시킴. - Junit test : H2, Local : Mysql 사용 예정

--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,9 @@ dependencies {
 	//querydsl 추가
 	implementation 'com.querydsl:querydsl-apt'
 	//mysql
-	runtimeOnly 'mysql:mysql-connector-java'
+	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
+	implementation 'mysql:mysql-connector-java:8.0.32'
+
 }
 
 tasks.named('test') {
