--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,14 +22,10 @@ spring:
   # DataSource
   # ========================================
   datasource:
-#    url: jdbc:mysql://localhost:3306/cms_admin?characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowMultiQueries=true&useCursorFetch=true&fetchSize=5000
-#    username: root
-#    password:
-#    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:h2:mem:cms_admin
-    username: sa
+    url: jdbc:mysql://localhost:3306/cms_admin?rewriteBatchedStatements=true&profileSQL=true&logger=Slf4JLogger&maxQuerySizeToLog=999999&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+    username: root
     password:
-    driver-class-name: org.h2.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
     hikari:
       # pool 에서 커넥션을 얻어오기전까지 기다리는 최대 시간 - default: 30000 (30s)
@@ -58,14 +54,6 @@ spring:
         #      show_sql: true # sout 으로 출력하기에 바람직하지 않음
         format_sql: true
         default_batch_fetch_size: 500
-
-#
-server:
-  error:
-    include-binding-errors: never
-    include-message: never
-    include-stacktrace: never
-    include-exception: false
 
 # =====================================================================================================================
 # logging
