[COMMIT] 프로젝트 기본 틀 잡는중.... - 테스트 코드 수정 및 Menu 최상위 메뉴가 아닌데 Url 주소 없는경우 setParent 호출 시 IllegalArgumentException 던지게 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,7 +48,7 @@ spring:
   jpa:
     # 방언 설정
     hibernate:
-      ddl-auto: create-drop  # 변경 금지!!
+      ddl-auto: none  # 변경 금지!!
     properties:
       hibernate:
         #      show_sql: true # sout 으로 출력하기에 바람직하지 않음
