[COMMIT] - 메시지 소스 테스트를 위한 application.yml 설정 수정 - MessageConfig.java에서 빈등록 -> application.yml 설정으로 변경

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -13,6 +13,12 @@ spring:
 
   main:
     banner-mode: console
+  # ========================================
+  # Messages
+  # ========================================
+  messages:
+    basename: messages.messages, messages.common
+    encoding: UTF-8
 
   # ========================================
   # DataSource
