--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,12 @@ spring:
 
   main:
     banner-mode: console
+  # ========================================
+  # Messages
+  # ========================================
+  messages:
+    basename: messages.messages, messages.common
+    encoding: UTF-8
 
   # ========================================
   # DataSource
