[COMMIT] - 화면구성을 위한 sideMenu 구성 수정. - 로그인 유저 이름 표출

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,6 +54,8 @@ spring:
         #      show_sql: true # sout 으로 출력하기에 바람직하지 않음
         format_sql: true
         default_batch_fetch_size: 500
+    # open in view 설정 false 적용
+    open-in-view: false
 
 # =====================================================================================================================
 # logging
