[COMMIT] - 수정파일 중간커밋. 공공데이터 API 스케줄링을 위한 호출 및 데이터 가공 테스트 추가

--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,10 @@ dependencies {
 	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
 	implementation 'mysql:mysql-connector-java:8.0.32'
 
+	//테스트에서 lombok 사용
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+
 }
 
 tasks.named('test') {
