--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,33 +1,31 @@
 # =====================================================================================================================
-# Spring Boot Profile Config : local
+# Spring Boot Profile Config : prod
 # =====================================================================================================================
 
 spring:
-  profiles:
-    active:
-      - test
+  config:
+    activate:
+      on-profile: prod
 
   thymeleaf:
     prefix: classpath:templates/
     cache: false
 
+  devtools:
+    livereload:
+      enabled: true
+
   main:
     banner-mode: console
-  # ========================================
-  # Messages
-  # ========================================
-  messages:
-    basename: messages.messages, messages.common
-    encoding: UTF-8
 
   # ========================================
   # DataSource
   # ========================================
   datasource:
-    url: jdbc:h2:mem:cms_admin
-    username: sa
+    url: jdbc:mysql://localhost:3306/cms_admin?rewriteBatchedStatements=true&profileSQL=true&logger=Slf4JLogger&maxQuerySizeToLog=999999&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+    username: root
     password:
-    driver-class-name: org.h2.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
     hikari:
       # pool 에서 커넥션을 얻어오기전까지 기다리는 최대 시간 - default: 30000 (30s)
@@ -41,26 +39,23 @@ spring:
       # pool 에 유지시킬 수 있는 최대 커넥션 수 - default: 10
       maximum-pool-size: 5
 
-# ========================================
-# JPA
-# ========================================
+
+
+
+  # ========================================
+  # JPA
+  # ========================================
   jpa:
     # 방언 설정
     hibernate:
-      ddl-auto: create-drop  # 변경 금지!!
+      ddl-auto: none  # 변경 금지!!
     properties:
       hibernate:
         #      show_sql: true # sout 으로 출력하기에 바람직하지 않음
         format_sql: true
         default_batch_fetch_size: 500
-# =====================================================================================================================
-# project
-# =====================================================================================================================
-
-project:
-  system:
-    admin-site-url: http://localhost:8080
-
+    # open in view 설정 false 적용
+    open-in-view: false
 
 # =====================================================================================================================
 # logging
@@ -88,3 +83,25 @@ logging:
   # 패턴
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss.SSS} %clr(%5.5p) [%15.15t] [%clr(%-36.36X{REQ_TRACE_ID}){magenta}] --- %clr(%-40.40logger{39}){cyan} : %m%n%throwable"
+    file: "%d{yyyy-MM-dd HH:mm:ss.SSS} %5.5p [%15.15t] [%-36.36X{REQ_TRACE_ID}] --- %-40.40logger{39} : %m%n%throwable{15}"
+  # 파일
+  file:
+    path: logs
+    name: ${logging.file.path}/output.log
+  logback:
+    rollingpolicy:
+      # 롤링
+      max-history: 30
+      max-file-size: 100MB
+      file-name-pattern: ${logging.file.path}/output_%d{yyyyMMdd}_%i.log
+  charset:
+    file: UTF-8
+    console: UTF-8
+
+# =====================================================================================================================
+# project
+# =====================================================================================================================
+
+project:
+  system:
+    admin-site-url: http://localhost:80
